# ndn-dpdk

./: .clang-format  .dockerignore  .gitignore  .markdownlint.json  .npmrc  .travis.yml  Dockerfile  LICENSE.md  Makefile  README.md  Rakefile  build-c.sh  build-docker.sh  cbuild.sh  cflags.sh  common.h  format-code.sh  go.mod  go.sum  gotest.sh  make-cgoflags.sh  meson.build  package-lock.json  package.json  tsconfig.json  tslint.json  xo.config.cjs  xo.config.js
appinit/: README.md  cgo.go  codepath.go  eal.go  exitcodes.go  face.go  init-config.go  log.go  mempool.go  mgmt.go  mod.ts  thread.go
bpf/: bpf.go
core/: README.md  common.h  common1.h  index.d.ts  logger.c  logger.h  mintmr.md  mod.ts  siphash.h  uthash.h
csrc/: README.md
docs/: .gitignore  Docker.md  Doxyfile  INSTALL.md  codedoc.sh  config.sample.yaml  face.md  fileserver.md  filter-Doxygen-warning.awk  forwarder.md  godoc.sh  hardware.md  huge-setup.sh  index.html  init-config.sample.yaml  ndndpdk-depends.sh  ndndpdk-svc.service  ndndpdk-svc@.service  ndnping.sample.yaml  nics.md  publication.md  trafficgen.md  tuning.md
dpdk/: README.md  cargs.go  cgoflags.go  cgostruct.in.go  cptr-array.go  cryptodev.c  cryptodev.go  cryptodev.h  eal.go  eal_test.go  errno.go  errno_test.go  ethdev.c  ethdev.go  ethdev.h  ether-addr.go  lcore-alloc.go  log.go  malloc.go  mbuf-loc.c  mbuf-loc.h  mbuf.c  mbuf.go  mbuf.h  mbuf_test.go  mempool.go  mod.ts  packet-iterator.go  packet.go  pci.go  ring.go  ring_test.go  segment.go  test-helper.go  test_test.go  thread.go  thread.h  tsc.go  tsc.h  vdev.go
face/: cgoflags.go  common.h  in-order-reassembler.c  in-order-reassembler.go  in-order-reassembler.h  in-order-reassembler_test.go  packet.go  packet.h  rx-face.c  rx-face.go  rx-face.h  test_test.go
iface/: README.md  base-face.go  cgoflags.go  common.h  counters.go  counters.h  enum.go  events.go  face-base.go  face.c  face.go  face.h  face_test.go  faceid.go  faceid.h  faces.go  facetable.c  facetable.go  facetable.h  gql.go  id.go  iface.c  iface.go  iface.h  in-order-reassembler.c  in-order-reassembler.go  in-order-reassembler.h  in-order-reassembler_test.go  index.d.ts  input-demux.go  input-demux_test.go  locator.go  log.go  mempools.go  mod.ts  pktqueue.go  pktqueue_test.go  rx-proc.c  rx-proc.h  rxburst.c  (+12 more)
integ/: helper.go  run.sh
js/: README.md  mod.ts
mgmt/: .gitignore  README.md  index.d.ts  index.ts  jrgen-spec-schema.ts  log.go  make-spec.ts  mgmt.go  mod.ts  rpc-client.ts  schema.ts
mk/: bpf.sh  build-docker.sh  cbuild.sh  cflags.sh  cgoflags.sh  cgostruct.sh  cgotest.sh  eslintrc-js.js  eslintrc-ts.js  format-code.sh  go.sh  godef.sh  godefcc.sh  goenv.sh  gogenerate.sh  gotest.sh  install-dirs.sh  (+5 more)
(+1853 files in other folders)
